fix: modal - add transition on opacity, visibility and transform

--- a/css/styles.css
+++ b/css/styles.css
@@ -607,11 +607,11 @@ h1 {
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.2);
+  transition: opacity 500ms ease, visibility 500ms ease;
 }
 
 .is-hidden {
   opacity: 0;
-  /* display: none; */
   visibility: hidden;
   pointer-events: none;
 }
@@ -627,7 +627,7 @@ h1 {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
-  animation: animateTop 2000ms ease-in;
+  transition: transform 500ms ease;
 }
 
 .modal-close {
@@ -643,19 +643,6 @@ h1 {
   padding: 6px;
 }
 
-@keyframes animateTop {
-  0% {
-    transform: translate(-50%, 150%);
-    opacity: 0;
-  }
-
-  50% {
-    transform: translate(-50%, 50%);
-    opacity: 0.5;
-  }
-
-  100% {
-    transform: translate(-50%, -50%);
-    opacity: 1;
-  }
+.is-hidden .modal {
+  transform: translate(-50%, 150%);
 }
